--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
 packaging==24.1
 parso==0.8.4
+pillow==10.4.0
 platformdirs==4.2.2
 prompt_toolkit==3.0.47
 psutil==6.0.0
