--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ pillow==10.4.0
 platformdirs==4.2.2
 prompt_toolkit==3.0.47
 psutil==6.0.0
+psycopg2-binary==2.9.9
 pure_eval==0.2.3
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
